fixed header to align to the center

--- a/header.css
+++ b/header.css
@@ -1,22 +1,23 @@
-ul {
+.nav {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     background-color: #333333;
+    text-align: center;
 }
 
-li {
-    float: left;
+.nav li {
+    display: inline;
 }
 
-li a {
-    display: block;
+.nav a {
+    display: inline-block;
+    padding: 10px;
     color: white;
     text-align: center;
     padding: 14px 16px;
 }
 
-li a:hover {
+.nav a:hover {
     color: lightblue;
 }
